
syntax = "proto3";

package monad_proto.blocktimestamp;

import "basic.proto";

message ProtoPingRequest {
  uint64 sequence = 1;
}

message ProtoPingResponse {
  uint64 sequence = 1;
  uint64 avg_wait_ns = 2;
}

message ProtoPingTick { }

message ProtoTimestampEnterEpoch {
  monad_proto.basic.ProtoEpoch epoch = 1;
}
