syntax = "proto3";

package monad_proto.message;

import "basic.proto";
import "block.proto";
import "ledger.proto";
import "signing.proto";
import "timeout.proto";
import "voting.proto";

message ProtoVoteMessage {
  monad_proto.voting.ProtoVoteInfo vote_info = 1;
  monad_proto.ledger.ProtoLedgerCommitInfo ledger_commit_info = 2;
}

message ProtoTimeoutMessage {
  monad_proto.timeout.ProtoTimeoutInfoAggSig tminfo = 1;
  optional monad_proto.timeout.ProtoTimeoutCertificate last_round_tc = 2;
}

message ProtoProposalMessageAggSig {
  monad_proto.block.ProtoBlockAggSig block = 1;
  optional monad_proto.timeout.ProtoTimeoutCertificate last_round_tc = 2;
}

message ProtoUnverifiedConsensusMessage {
  oneof OneofMessage {
    ProtoProposalMessageAggSig proposal = 1;
    ProtoTimeoutMessage timeout = 2;
    ProtoVoteMessage vote = 3;
  }
  monad_proto.signing.ProtoSecpSignature author_signature = 4;
}
